2011-02-08  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: re-apply r77924.

        Test: inspector/console-api-on-call-frame.html

        * inspector/InjectedScriptSource.js:
        * inspector/front-end/ExtensionServer.js:
        (WebInspector.ExtensionServer.prototype._onEvaluateOnInspectedPage):

2011-02-08  Andreas Kling  <kling@webkit.org>

        Reviewed by Tor Arne Vestbø.

        REGRESSION(r77312): Unbreak TiledBackingStore.

        Due to an off-by-one error, we were no longer rendering the
        rightmost column and bottom row of tiles.

        Covered by tst_QGraphicsWebView::widgetsRenderingThroughCache().

        * platform/graphics/TiledBackingStore.cpp:
        (WebCore::TiledBackingStore::invalidate):
        (WebCore::TiledBackingStore::updateTileBuffers):
        (WebCore::TiledBackingStore::paint):
        (WebCore::TiledBackingStore::createTiles):

2011-02-08  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r77924.
        http://trac.webkit.org/changeset/77924
        https://bugs.webkit.org/show_bug.cgi?id=53997

        Breaks inspector tests. (Requested by pfeldman on #webkit).

        * inspector/InjectedScriptSource.js:
        (.):
        ():

2011-02-04  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: [refacotring] merge InspectorAgent::willSendRequest() into InspectorResourceAgent
        https://bugs.webkit.org/show_bug.cgi?id=53789
         - perform UserAgent override via InspectorInstrumentation
         - move adding extra request headers to InspectorResourceAgent
         - simplified things in InspectorState

        * inspector/Inspector.idl:
        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::disconnectFrontend):
        (WebCore::InspectorAgent::applyUserAgentOverride):
        * inspector/InspectorAgent.h:
        * inspector/InspectorInstrumentation.cpp: